tests/compile_fail/missing_args_1.rs
use cmpchain::chain;
fn main() { chain!(<); }