tests/compile_fail/missing_args_1.stderr
error: Expected two arguments for "<"
 --> $DIR/missing_args_1.rs:2:13
  |
2 | fn main() { chain!(<); }
  |             ^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
